# fatoora-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cargo.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  python-bindings.yml  python-wheels.yml  python.yml  release-cli.yml  rust.yml
assets/pkeys/: test_zatca_pkey.der
bench/cli/: hash_bench.sh
bench/cli/results/: hash_bench.md
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/examples/: invoice_basic.py  invoice_parse.py  load_lib.py
bindings/python/tests/: test_invoice_basic.py
fatoora-core/: Cargo.toml
fatoora-core/assets/schemas/UBL2.1/xsd/common/: UBL-xmldsig-core-schema-2.1.xsd
fatoora-core/assets/templates/: cac_signature.xml  qr_reference.xml  ubl_extensions.xml
fatoora-core/src/: abi.rs  api.rs  config.rs  csr.rs  invoice.rs  lib.rs
fatoora-core/src/invoice/: builder.rs  qr.rs  sign.rs  validation.rs  xml.rs
fatoora-core/src/invoice/xml/: constants.rs  parse.rs
fatoora-core/tests/: api_live.rs  builder_validation.rs  csr.rs  fixture_hash_sign.rs  parse_fixtures.rs  parse_invoice.rs  signing.rs  validation.rs
fatoora-core/tests/common/: mod.rs
fatoora-core/tests/fixtures/certs/: zatca_cert_b64.txt
fatoora-core/tests/fixtures/csrs/: test_zatca_en1.csr
fatoora-core/tests/fixtures/invoices/: sample-simplified-invoice.xml
fatoora-derive/: Cargo.toml
fatoora-derive/src/: lib.rs  rules.rs
fatoora-derive/tests/: validate_tests.rs
fatoora-derive/tests/fail/: unknown_rule.rs  unknown_rule.stderr  wrong_type.rs  wrong_type.stderr
fatoora-derive/tests/ok/: basic_valid.rs  skip_field.rs  struct_rules.rs
fatoora-ffi/: Cargo.toml  build.rs  cbindgen.toml
fatoora-ffi/examples/: basic.c
fatoora-ffi/include/: fatoora.h  fatoora_ffi.h
fatoora-ffi/src/: error.rs  lib.rs  types.rs
fatoora-ffi/tests/: ffi_smoke.rs
fatoora-rs/: Cargo.toml
fatoora-rs-cli/: Cargo.toml
fatoora-rs-cli/src/: main.rs
fatoora-rs-cli/tests/: cli.rs
fatoora-rs/assets/schematrons/: 20210819_ZATCA_E-invoice_Validation_Rules.xsl
fatoora-rs/src/: abi.rs  api_request.rs  config.rs  csr.rs  invoice.rs  lib.rs  pcsid.rs  sign.rs  validate.rs
fatoora-rs/src/invoice/: validation.rs  xml.rs
