[package]
name = "fatoora-core"
version = "0.1.0"
edition = "2024"
description = "Rust Fatoora/ZATCA SDK with C ABI and multi-language bindings"
license = "MIT"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
ffi-support = "0.4"
java-properties = "2.0.0"
quick-xml = { version = "0.38.4", features = ["serialize"] }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
fatoora-derive = { path = "../fatoora-derive" }
x509-cert = { version = "0.3.0-rc.2", features = ["builder", "pem"] }
k256 = { version = "0.14.0-rc.1", features = [
    "ecdsa",
    "ecdsa-core",
    "sha256",
    "getrandom",
    "pkcs8",
    "pem",
] }
const-oid = { version = "0.10.1", features = ["db"] }
ecdsa = { version = "0.17.0-rc.9", features = [
    "algorithm",
    "alloc",
    "digest",
    "hazmat",
    "pkcs8",
    "sha2",
] }
base64ct = "1.8.0"
libxml = "0.3.8"
isocountry = "0.3.2"
chrono = { version = "0.4.42", features = ["serde"] }
iso_currency = { version = "0.5.3", features = ["with-serde"] }
reqwest = { version = "0.13.0", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[features]
disable-network = []

[build-dependencies]
cbindgen = "0.29.2"
