[package]
name = "fatoora-rs"
version = "0.1.0"
edition = "2024"
description = "Rust Fatoora/ZATCA SDK with C ABI and multi-language bindings"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
ffi-support = "0.4"
java-properties = "2.0.0"
k256 = "0.13.4"
quick-xml = "0.38.4"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = "0.3.44"
tls_codec = "0.4.2"
fatoora-derive = { path = "../fatoora-derive" }

[build-dependencies]
cbindgen = "0.29.2"

