[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fatoora-rs"
version = "0.1.1"
description = "Python bindings for the fatoora-rs ZATCA SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "mqqz" }]
dependencies = ["cffi>=1.16"]
keywords = ["zatca", "invoice", "e-invoicing", "sdk", "ffi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/mqqz/fatoora-rs"
Repository = "https://github.com/mqqz/fatoora-rs"
Documentation = "https://github.com/mqqz/fatoora-rs"
Issues = "https://github.com/mqqz/fatoora-rs/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["fatoora"]

[tool.setuptools.package-data]
fatoora = ["*.so", "*.dylib", "*.dll"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *-musllinux_*"
test-command = "python -c \"import fatoora; print(fatoora.__all__)\""

[tool.cibuildwheel.linux]
before-build = "cargo build -p fatoora-ffi --release"

[tool.cibuildwheel.macos]
before-build = "cargo build -p fatoora-ffi --release"

[tool.cibuildwheel.windows]
before-build = "cargo build -p fatoora-ffi --release"
